--- a/Codigo/Ingesta_Datos_Abiertos.ipynb
+++ b/Codigo/Ingesta_Datos_Abiertos.ipynb
@@ -193,9 +193,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "4336c5ff-cea2-451c-89d2-1fa97afdbd5e",
+     "nuid": "52a63c6e-2e33-418e-9f44-c03f845c045a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -203,33 +206,26 @@
    },
    "outputs": [],
    "source": [
-    "import requests\n",
+    "# Importar librerías necesarias\n",
     "import pandas as pd\n",
-    "from io import StringIO\n",
-    "from pyspark.sql import SparkSession\n",
     "\n",
-    "# Crear sesión de Spark\n",
-    "spark = SparkSession.builder.getOrCreate()\n",
+    "# Ruta local del archivo\n",
+    "file_path = \"/Volumes/main/diplomado_datos/manual/df_secop.csv\"\n",
     "\n",
-    "# URL del dataset\n",
-    "url_secop = \"https://www.datos.gov.co/resource/rpmr-utcd.csv?$limit=100000&$offset=100000\"\n",
+    "# Leer el archivo CSV con pandas usando coma como delimitador\n",
+    "df_secop_pd = pd.read_csv(file_path, delimiter=',', header=0, on_bad_lines='skip')\n",
+    "print(df_secop_pd.columns.tolist())\n",
     "\n",
-    "# Descargar contenido\n",
-    "response_secop = requests.get(url_secop)\n",
+    "# 🔧 Limpieza de texto y filas incompletas\n",
+    "for col in [\"objeto_a_contratar\", \"objeto_del_proceso\"]:\n",
+    "    df_secop_pd[col] = df_secop_pd[col].astype(str).str.replace(\"\\n\", \" \").str.replace('\"', \"\").str.strip()\n",
     "\n",
-    "# Leer CSV en pandas\n",
-    "df_secop_pd = pd.read_csv(StringIO(response_secop.text), delimiter=\",\", low_memory=False)\n",
+    "df_secop_pd = df_secop_pd.dropna(thresh=10)  # Elimina filas con menos de 10 columnas válidas\n",
     "\n",
-    "# Limpiar nombres de columnas (opcional pero recomendado)\n",
-    "df_secop_pd.columns = [col.strip().lower().replace(\" \", \"_\") for col in df_secop_pd.columns]\n",
-    "\n",
-    "# Verifica que los datos se cargaron correctamente en pandas\n",
-    "print(df_secop_pd.head())\n",
-    "\n",
-    "# Convertir a Spark DataFrame\n",
+    "# Convertir pandas a Spark\n",
     "df_secop = spark.createDataFrame(df_secop_pd)\n",
     "\n",
-    "# Mostrar en Databricks\n",
+    "# Mostrar los datos limpios\n",
     "display(df_secop)"
    ]
   },
@@ -254,7 +250,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0fe5b8cd-5aa7-454d-b9ce-5b463e58966b",
      "showTitle": false,
@@ -266,19 +265,21 @@
    "source": [
     "from pyspark.sql.functions import col\n",
     "\n",
-    "# Get the target schema\n",
+    "# 🧠 Obtener el esquema de la tabla destino\n",
     "target_schema = spark.table(\"main.diplomado_datos.secop\").schema\n",
     "\n",
-    "# Select and cast columns that exist in both df_secop and target_schema\n",
+    "# 🔄 Alinear cada columna del DataFrame con el tipo de dato de la tabla\n",
     "df_secop_aligned = df_secop.select(\n",
-    "    [col(field.name).cast(field.dataType) for field in target_schema.fields if field.name in df_secop.columns]\n",
+    "    [col(field.name).cast(field.dataType) for field in target_schema.fields]\n",
     ")\n",
     "\n",
-    "# Write the aligned DataFrame to the Delta table\n",
+    "# 📝 Escribir en la tabla Delta usando append y mergeSchema\n",
     "df_secop_aligned.write.format(\"delta\") \\\n",
     "    .mode(\"append\") \\\n",
     "    .option(\"mergeSchema\", \"true\") \\\n",
-    "    .saveAsTable(\"main.diplomado_datos.secop\")"
+    "    .saveAsTable(\"main.diplomado_datos.secop\")\n",
+    "\n",
+    "print(\"✅ Datos añadidos correctamente a la tabla 'main.diplomado_datos.secop'\")"
    ]
   },
   {
@@ -286,9 +287,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "845db4d8-3824-4f87-b2db-992f9d321798",
+     "nuid": "229b8c12-5dce-4102-84e0-189559c20e56",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -296,12 +300,289 @@
    },
    "outputs": [],
    "source": [
-    "total_registros = 19446266\n",
-    "offset_inicial = 200000\n",
-    "limite = 100000\n",
-    "paginas_faltantes = ((total_registros - offset_inicial) // limite) + 1\n",
+    "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "print(f\"Quedan {paginas_faltantes} bloques por descargar...\")"
+    "# 📂 Ruta basada en tu ubicación actual en Databricks\n",
+    "ruta_base = \"/Volumes/main/diplomado_datos/manual\"\n",
+    "\n",
+    "# 📌 Buscar todos los archivos que comienzan con 'secop_lote_' y terminan en '.csv'\n",
+    "archivos_lotes = [f for f in os.listdir(ruta_base) if f.startswith(\"secop_lote_\") and f.endswith(\".csv\")]\n",
+    "\n",
+    "# 🔢 Ordenar los archivos por número de lote (usando el número en el nombre)\n",
+    "archivos_lotes.sort(key=lambda x: int(x.split(\"_\")[-1].split(\".\")[0]))\n",
+    "\n",
+    "# 🧩 Combinar todos los archivos en un solo DataFrame\n",
+    "df_secop = pd.concat([\n",
+    "    pd.read_csv(os.path.join(ruta_base, archivo), low_memory=False)\n",
+    "    for archivo in archivos_lotes\n",
+    "], ignore_index=True)\n",
+    "\n",
+    "# 📊 Verificación rápida\n",
+    "print(f\"✅ Total de registros combinados: {df_secop.shape[0]}\")\n",
+    "print(f\"🔬 Columnas disponibles: {df_secop.columns.tolist()}\")\n",
+    "\n",
+    "# 🧼 (Opcional) Validar duplicados y nulos\n",
+    "print(f\"🔍 Duplicados: {df_secop.duplicated().sum()}\")\n",
+    "print(\"🧹 Nulos por columna:\")\n",
+    "print(df_secop.isnull().sum())\n",
+    "\n",
+    "# 💾 Guardar el archivo combinado en la misma ruta\n",
+    "df_secop.to_csv(os.path.join(ruta_base, \"secop_completo.csv\"), index=False)\n",
+    "print(\"📦 Archivo combinado guardado como 'secop_completo.csv'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6a622d5c-f7f3-4828-b917-2da89bb2af61",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_raw = spark.read.csv(\n",
+    "    path=\"/Volumes/main/diplomado_datos/manual/secop_lote_*.csv\",\n",
+    "    header=True,\n",
+    "    sep=\",\",\n",
+    "    quote='\"',\n",
+    "    escape='\"',\n",
+    "    multiLine=True,\n",
+    "    encoding=\"UTF-8\",\n",
+    "    inferSchema=False\n",
+    ")\n",
+    "\n",
+    "# Verificar número de columnas\n",
+    "print(len(df_raw.columns))\n",
+    "print(df_raw.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "09c7e8f5-89ab-4807-9152-50d92a6cadbd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "\n",
+    "df_limpio = df_raw.dropna(subset=[\n",
+    "    \"valor_contrato\",\n",
+    "    \"fecha_de_firma_del_contrato\",\n",
+    "    \"fecha_inicio_ejecuci_n\",\n",
+    "    \"fecha_fin_ejecuci_n\",\n",
+    "    \"documento_proveedor\"\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "94fe2cba-bea4-41d2-90ee-f43512ace5bd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import to_timestamp, regexp_replace\n",
+    "\n",
+    "df_limpio = df_limpio.withColumn(\"valor_contrato\", regexp_replace(\"valor_contrato\", \"[^0-9]\", \"\").cast(\"long\"))\n",
+    "\n",
+    "df_limpio = df_limpio.withColumn(\"fecha_de_firma_del_contrato\", to_timestamp(\"fecha_de_firma_del_contrato\"))\n",
+    "df_limpio = df_limpio.withColumn(\"fecha_inicio_ejecuci_n\", to_timestamp(\"fecha_inicio_ejecuci_n\"))\n",
+    "df_limpio = df_limpio.withColumn(\"fecha_fin_ejecuci_n\", to_timestamp(\"fecha_fin_ejecuci_n\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "89d66e19-ca43-49f6-8f8f-c851a2221647",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, to_timestamp\n",
+    "\n",
+    "# Filtrar solo las filas con fechas válidas en el formato YYYY-MM-DDTHH:MM:SS\n",
+    "df_limpio = df_raw.filter(\n",
+    "    col(\"fecha_de_firma_del_contrato\").rlike(r\"^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\")\n",
+    ")\n",
+    "\n",
+    "# Convertir esa columna a timestamp\n",
+    "df_limpio = df_limpio.withColumn(\n",
+    "    \"fecha_de_firma_del_contrato\", to_timestamp(\"fecha_de_firma_del_contrato\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "92aea3b0-57ab-4fc8-a640-b8c4996d34a8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, to_timestamp\n",
+    "\n",
+    "# Primero, filtrar solo las filas con fechas válidas en las 3 columnas\n",
+    "df_fechas_validas = df_raw.filter(\n",
+    "    col(\"fecha_de_firma_del_contrato\").rlike(r\"^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\") &\n",
+    "    col(\"fecha_inicio_ejecuci_n\").rlike(r\"^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\") &\n",
+    "    col(\"fecha_fin_ejecuci_n\").rlike(r\"^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}\")\n",
+    ")\n",
+    "\n",
+    "# Luego convertirlas a timestamp\n",
+    "df_limpio = (\n",
+    "    df_fechas_validas\n",
+    "    .withColumn(\"fecha_de_firma_del_contrato\", to_timestamp(\"fecha_de_firma_del_contrato\"))\n",
+    "    .withColumn(\"fecha_inicio_ejecuci_n\", to_timestamp(\"fecha_inicio_ejecuci_n\"))\n",
+    "    .withColumn(\"fecha_fin_ejecuci_n\", to_timestamp(\"fecha_fin_ejecuci_n\"))\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c21c1673-c93c-44b9-8ef5-0f7ec9e78a04",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import to_timestamp\n",
+    "df_limpio = df_limpio.withColumn(\n",
+    "    \"fecha_de_firma_del_contrato\",\n",
+    "    to_timestamp(\"fecha_de_firma_del_contrato\")\n",
+    ")\n",
+    "df_limpio = df_limpio.withColumn(\n",
+    "    \"fecha_inicio_ejecuci_n\",\n",
+    "    to_timestamp(\"fecha_inicio_ejecuci_n\")\n",
+    ").withColumn(\n",
+    "    \"fecha_fin_ejecuci_n\",\n",
+    "    to_timestamp(\"fecha_fin_ejecuci_n\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9cf27b26-48f6-43a0-9f86-0792ad55373b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_limpio.select(\n",
+    "    \"fecha_de_firma_del_contrato\", \n",
+    "    \"fecha_inicio_ejecuci_n\", \n",
+    "    \"fecha_fin_ejecuci_n\"\n",
+    ").show(20, truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "51a2ea8e-ed8b-440d-81f9-4e69ad3cc947",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, count, when, isnan, trim\n",
+    "\n",
+    "columnas_clave = [\n",
+    "    \"valor_contrato\",\n",
+    "    \"nombre_de_la_entidad\",\n",
+    "    \"numero_de_proceso\",\n",
+    "    \"tipo_documento_proveedor\",\n",
+    "    \"documento_proveedor\"\n",
+    "]\n",
+    "\n",
+    "df_limpio.select([\n",
+    "    count(\n",
+    "        when(\n",
+    "            col(c).isNull() | (trim(col(c)) == \"\"),\n",
+    "            c\n",
+    "        )\n",
+    "    ).alias(f\"{c}_vacios\")\n",
+    "    for c in columnas_clave\n",
+    "]).show()\n"
    ]
   }
  ],
