--- a/Codigo/Ingesta_Datos_Abiertos.ipynb
+++ b/Codigo/Ingesta_Datos_Abiertos.ipynb
@@ -78,6 +78,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "530c0b1d-51b8-4e34-a29d-3c3e3266e25b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Debido a un error de conexión en el puerto 443, se procede a cargar la base de datos manualmente. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -242,7 +258,7 @@
     }
    },
    "source": [
-    "## DataSets"
+    "### Carga completa del dataset de forma manual."
    ]
   },
   {
@@ -330,6 +346,22 @@
     "# 💾 Guardar el archivo combinado en la misma ruta\n",
     "df_secop.to_csv(os.path.join(ruta_base, \"secop_completo.csv\"), index=False)\n",
     "print(\"📦 Archivo combinado guardado como 'secop_completo.csv'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9445eeac-0471-4e89-a282-093d1cd07a75",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Filtrado y Conversión de Fechas en PySpark"
    ]
   },
   {
@@ -544,45 +576,6 @@
     "    \"fecha_inicio_ejecuci_n\", \n",
     "    \"fecha_fin_ejecuci_n\"\n",
     ").show(20, truncate=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "51a2ea8e-ed8b-440d-81f9-4e69ad3cc947",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import col, count, when, isnan, trim\n",
-    "\n",
-    "columnas_clave = [\n",
-    "    \"valor_contrato\",\n",
-    "    \"nombre_de_la_entidad\",\n",
-    "    \"numero_de_proceso\",\n",
-    "    \"tipo_documento_proveedor\",\n",
-    "    \"documento_proveedor\"\n",
-    "]\n",
-    "\n",
-    "df_limpio.select([\n",
-    "    count(\n",
-    "        when(\n",
-    "            col(c).isNull() | (trim(col(c)) == \"\"),\n",
-    "            c\n",
-    "        )\n",
-    "    ).alias(f\"{c}_vacios\")\n",
-    "    for c in columnas_clave\n",
-    "]).show()\n"
    ]
   }
  ],
