--- a/Codigo/Ingesta_Datos_Abiertos.ipynb
+++ b/Codigo/Ingesta_Datos_Abiertos.ipynb
@@ -44,7 +44,7 @@
     "from pyspark.sql import SparkSession\n",
     "\n",
     "# Iniciar sesión Spark\n",
-    "spark = SparkSession.builder.getOrCreate()\n",
+    "spark = SparkSession.getActiveSession()\n",
     "\n",
     "# URLs de los datasets\n",
     "url_secop = \"https://www.datos.gov.co/resource/rpmr-utcd.csv?$limit=100000\"\n",
@@ -91,6 +91,28 @@
    },
    "source": [
     "### Debido a un error de conexión en el puerto 443, se procede a cargar la base de datos manualmente. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a0e2cf6a-563c-4497-9858-1f08d517a8db",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.getOrCreate()"
    ]
   },
   {
@@ -354,6 +376,79 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "30265b12-6ce7-4da9-8872-983fa70a2aec",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "###  Método alternativo: carga relajada de la base para evitar saturación de memoria."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c1d58f44-5713-419b-84b9-a1056c9c34e8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import *\n",
+    "\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    "ruta_base = \"/Volumes/main/diplomado_datos/manual\"\n",
+    "\n",
+    "# Leer todos los CSV en una sola instrucción con Spark\n",
+    "df_secop_spark = spark.read.csv(ruta_base + \"/secop_lote_*.csv\", header=True, inferSchema=True)\n",
+    "\n",
+    "print(f\"🔍 Registros totales: {df_secop_spark.count()}\")\n",
+    "print(\"🧪 Columnas disponibles:\")\n",
+    "df_secop_spark.printSchema()\n",
+    "\n",
+    "# Guardar en parquet (mucho más eficiente que CSV)\n",
+    "df_secop_spark.write.mode(\"overwrite\").parquet(ruta_base + \"/secop_completo_parquet\")\n",
+    "print(\"✅ Dataset guardado como parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "68ab94f4-7f11-4c7c-a8a9-6a700d85a221",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(df_secop_spark)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "9445eeac-0471-4e89-a282-093d1cd07a75",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -576,6 +671,43 @@
     "    \"fecha_inicio_ejecuci_n\", \n",
     "    \"fecha_fin_ejecuci_n\"\n",
     ").show(20, truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cf3fddd8-19f9-4e5c-bccf-7ca21286516a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Conjunto de datos SECOP depurado y estructurado correctamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "89b97d4b-457b-469e-870b-926202a875db",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_limpio.limit(50).toPandas().head(10)"
    ]
   }
  ],
